# docstron-python-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  QUICK_START.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  setup.py  test_connection.py
docstron/: __init__.py  base.py  client.py  exceptions.py
docstron/resources/: __init__.py  applications.py  documents.py  templates.py  usage.py
examples/: 01_quick_start.py  02_invoice_template.py  03_error_handling.py  04_managing_resources.py  README.md
tests/: conftest.py  test_client.py  test_exceptions.py
